generated/checker-for-evaluation/generated/test-UAF-aec8e6bf839101784f3ef037dcdb9432c3f32343/build_logs/0/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:17:17: error: ‘taint’ is not a namespace-name
   17 | using namespace taint;
      |                 ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:96:44: error: no matching function for call to ‘clang::ento::PathDiagnosticLocation::createBegin(const clang::FunctionDecl*&, const clang::SourceManager&, clang::ASTContext&)’
   96 |         PathDiagnosticLocation::createBegin(FD, BR.getSourceManager(), FD->getASTContext());
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:6:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&)’
  254 |   static PathDiagnosticLocation createBegin(const Decl *D,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:254:33: note:   candidate expects 2 arguments, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:261:3: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Decl*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  261 |   createBegin(const Decl *D, const SourceManager &SM,
      |   ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:262:51: note:   no known conversion for argument 3 from ‘clang::ASTContext’ to ‘clang::ento::LocationOrAnalysisDeclContext’ {aka ‘llvm::PointerUnion<const clang::LocationContext*, clang::AnalysisDeclContext*>’}
  262 |               const LocationOrAnalysisDeclContext LAC) {
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:267:33: note: candidate: ‘static clang::ento::PathDiagnosticLocation clang::ento::PathDiagnosticLocation::createBegin(const clang::Stmt*, const clang::SourceManager&, clang::ento::LocationOrAnalysisDeclContext)’
  267 |   static PathDiagnosticLocation createBegin(const Stmt *S,
      |                                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:267:57: note:   no known conversion for argument 1 from ‘const clang::FunctionDecl*’ to ‘const clang::Stmt*’
  267 |   static PathDiagnosticLocation createBegin(const Stmt *S,
      |                                             ~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:98:103: error: no matching function for call to ‘clang::ento::BasicBugReport::BasicBugReport(clang::ento::BugType&, const char [91], const clang::FunctionDecl*&)’
   98 |       "Dangling pointer: bdev_file is not reset to NULL after btrfs_close_bdev frees the resource", FD);
      |                                                                                                       ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:6:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:256:3: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(const clang::ento::BugType&, llvm::StringRef, clang::ento::PathDiagnosticLocation)’
  256 |   BasicBugReport(const BugType &bt, StringRef desc, PathDiagnosticLocation l)
      |   ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:256:76: note:   no known conversion for argument 3 from ‘const clang::FunctionDecl*’ to ‘clang::ento::PathDiagnosticLocation’
  256 |   BasicBugReport(const BugType &bt, StringRef desc, PathDiagnosticLocation l)
      |                                                     ~~~~~~~~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(const clang::ento::BasicBugReport&)’
  251 | class BasicBugReport : public BugReport {
      |       ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note:   candidate expects 1 argument, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(clang::ento::BasicBugReport&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note:   candidate expects 1 argument, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:95:28: warning: unused variable ‘Loc’ [-Wunused-variable]
   95 |     PathDiagnosticLocation Loc =
      |                            ^~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
